Fixed label alignment

--- a/css/index.css
+++ b/css/index.css
@@ -88,6 +88,7 @@ header h1 {
     border-radius: 35px;
     border-style: solid;
     border-color: white;
+    text-align: center;
 } 
 
 /* IMAGE STYLES */
